📱 Fixed Navbar centering on Mobile Devices

--- a/main.css
+++ b/main.css
@@ -179,6 +179,11 @@ a:hover
     display: none;
 }
 
+#Banner1
+{
+    display: block;
+}
+
 /*--------CONTENT--------*/
 
 /* Content Padding */
